[project]
name = "link-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "aiohttp-retry>=2.9.1",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.0",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "selenium>=4.39.0",
    "uvicorn>=0.40.0",
    "webdriver-manager>=4.0.2",
]
